[project]
name = "alert-exporter"
version = "0.1.0"
authors = [{ name = "Baptiste ROUX", email = "rouxbaptiste@outlook.com" }]
description = "Extract alerts configured in different sources (eg: Prometheus Rules, CloudWatch Alarms, etc.)"
readme = "README.rst"
license = { file = "LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/BapRx/alert-exporter"
"Bug Tracker" = "https://github.com/BapRx/alert-exporter/issues"

[tool.black]
line-length = 88
target-version = ['py36', 'py37', 'py38']
include = '\.pyi?$'

[tool.isort]
atomic = true
profile = "black"
line_length = 88
skip_gitignore = true

[tool.ruff]
line-length = 88
