[project]
name = "alert-exporter"
version = "0.2.0"
keywords = ["alert_exporter", "alert", "monitoring", "prometheus", "cloudwatch"]
authors = [{ name = "Baptiste ROUX", email = "rouxbaptiste@outlook.com" }]
description = "Extract alerts configured in different sources (eg: Prometheus Rules, CloudWatch Alarms, etc.)"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
]
dependencies = ["kubernetes", "boto3", "humanize"]

[project.scripts]
alert-exporter = "alert_exporter.cli:main"

[project.urls]
Homepage = "https://github.com/BapRx/alert-exporter"
"Bug Tracker" = "https://github.com/BapRx/alert-exporter/issues"
changelog = "https://github.com/BapRx/alert-exporter/blob/master/CHANGELOG.md"

[tool.black]
line-length = 88
target-version = ['py36', 'py37', 'py38']
include = '\.pyi?$'

[tool.isort]
atomic = true
profile = "black"
line_length = 88
skip_gitignore = true

[tool.ruff]
line-length = 88
