[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "alert_exporter"
version = "0.4.0"
keywords = ["alert_exporter", "alert", "monitoring", "prometheus", "cloudwatch"]
authors = [{ name = "Baptiste ROUX", email = "rouxbaptiste@outlook.com" }]
description = "Extract alerts configured in different sources (eg: Prometheus Rules, CloudWatch Alarms, Pingdom)"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = ["kubernetes", "boto3", "humanize", "jinja2"]

[project.scripts]
alert-exporter = "alert_exporter.cli:main"

[project.urls]
Homepage = "https://github.com/BapRx/alert-exporter"
"Bug Tracker" = "https://github.com/BapRx/alert-exporter/issues"
changelog = "https://github.com/BapRx/alert-exporter/blob/master/CHANGELOG.md"

[tool.setuptools.packages.find]
include = ["alert_exporter", "alert_exporter.sources"]
exclude = ["alert_exporter.templates"]
namespaces = false

[tool.setuptools.package-data]
"*" = ["*.jinja"]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310']
include = '\.pyi?$'

[tool.isort]
atomic = true
profile = "black"
line_length = 88
skip_gitignore = true

[tool.ruff]
line-length = 88
